@@ -1,4 +1,5 @@
 0.04
+- Fix rigth word to right.
 
 0.03 (August 24, 2012)
 - Fix length of #-----... to 80 chars.
